crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_node_arg_paren_balanced.txt
(call_expression (#eq? (identifier) @x))
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:19
  |
1 | (call_expression (#eq? (identifier) @x))
  |                   ^^^^
  |
help: `#eq?` corresponds to `==` inside a node pattern, but this call does not provide both a captured target and a compatible value
